<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.CreateWorkoutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppThemeAppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_workout_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_background"
        android:orientation="vertical"
        android:padding="@dimen/create_workout_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_workout_image"
                    android:layout_width="@dimen/workout_image_size"
                    android:layout_height="@dimen/workout_image_size"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_workout_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/create_workout_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_workout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/workout_name"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_workout_btn_marginTop"
                    android:background="@drawable/sign_in_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>
